# django-accounts

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
app/: settings.py  urls.py
django_accounts/accounts_base/api/: serializers.py
django_accounts/accounts_sun/: admin.py  apps.py  models.py
django_accounts/accounts_sun/api/: serializers.py  urls.py  views.py
run_project/: asgi.py  settings.py  urls.py  wsgi.py
samples/base/: requirements-dev.txt  requirements.txt
samples/base/sample/: settings.py
samples/sun/: requirements-dev.txt
samples/sun/sample/: settings.py  urls.py
src/: manage.py
src/django_accounts/accounts_base/: apps.py
src/django_accounts/accounts_base/migrations/: 0001_initial.py
src/django_accounts/api/: urls.py  views.py
src/django_accounts/config/: asgi.py  settings.py  urls.py  wsgi.py
src/django_accounts/migrations/: 0001_initial.py
