[metadata]
name = django-accounts
version = 0.0.3
author = Danny Julca Carhuaz
author_email = djulcac@uni.pe
description = Manage accounts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djulcac/django-accounts
project_urls =
    Bug Tracker = https://github.com/djulcac/django-accounts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Django>=5.0.4
    Markdown>=3.6
    djangorestframework>=3.15.1
    django-rest-knox>=4.2.0

[options.packages.find]
where = src